--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
       </div>
       <div id="table-left">
-        <div class="smalltitle-left" style="float: right"><p class="big-font">个人信息</p></div>
-        <div style="float: right;clear: right">
+        <div class="smalltitle-left"><p class="big-font">个人信息</p></div>
+        <div >
           <table>
             <tr>
               <td>姓名：</td>
@@ -68,8 +68,8 @@
             </tr>
           </table>
         </div>
-        <div class="smalltitle-left" style="float: right"><p class="big-font">求职意向</p></div>
-        <div style="float: right;clear: right">
+        <div class="smalltitle-left"><p class="big-font">求职意向</p></div>
+        <div>
           <table>
             <tr>
               <td>期望行业：</td>
@@ -93,8 +93,8 @@
             </tr>
           </table>
         </div>
-        <div class="smalltitle-left" style="float: right"><p class="big-font">工作经历</p></div>
-        <div style="float: right;clear: right">
+        <div class="smalltitle-left"><p class="big-font">工作经历</p></div>
+        <div>
           <table>
             <tr>
               <td colspan="2" style="text-align: center">2014-9&nbsp;&nbsp;&nbsp;&nbsp;至&nbsp;&nbsp;&nbsp;&nbsp;2016-1</td>
@@ -126,8 +126,8 @@
             </tr>
           </table>
         </div>
-        <div class="smalltitle-left" style="float: right"><p class="big-font">教育经历</p></div>
-        <div style="float: right;clear: right">
+        <div class="smalltitle-left"><p class="big-font">教育经历</p></div>
+        <div>
           <table>
             <tr>
               <td colspan="2" style="text-align: center">2013-9&nbsp;&nbsp;至&nbsp;&nbsp;2017-6</td>
