--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>HomePage Of JiangXiaoWu</title>
+    <title>HomePage Of XiaoWu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shorcut icon" href="images/page.ico"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">HomePage Of JiangXiaoWu</h1>
+      <h1 class="project-name">HomePage Of XiaoWu</h1>
       <h2 class="project-tagline">You could get some information about me from my homepage</h2>
       <a href="https://github.com/a1251/xiao.github.com" class="btn">View on GitHub</a>
       <a href="https://github.com/a1251/xiao.github.com/zipball/master" class="btn">Download .zip</a>
