--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="main-content mytable-style">
       <div class="resume">
-      <div><!--<span class="font-yellow mytable-title ">蒋小武的简历</span>-->
+      <div id="mypic-box"><!--<span class="font-yellow mytable-title ">蒋小武的简历</span>-->
         <div class="mypic-box">
           <img src="images/mypic22.jpg" class="mypictrue"/>
           <div class="mypic-box-back mypictrue">
