--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HomePage Of XiaoWu</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <link rel="shorcut icon" href="images/page.ico"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -64,7 +64,7 @@
             </tr>
             <tr>
               <td>在职状态：</td>
-              <td>目前正在找工作</td>
+              <td>在职</td>
             </tr>
           </table>
         </div>
@@ -97,7 +97,7 @@
         <div>
           <table>
             <tr>
-              <td colspan="2" style="text-align: center">2014-9&nbsp;&nbsp;&nbsp;&nbsp;至&nbsp;&nbsp;&nbsp;&nbsp;2016-1</td>
+              <td colspan="2" style="text-align: center">2014-9&nbsp;&nbsp;&nbsp;&nbsp;至&nbsp;&nbsp;&nbsp;&nbsp;2016-3</td>
 
             </tr>
             <tr>
@@ -122,7 +122,7 @@
             </tr>
             <tr style="height: 80px">
               <td>工作职责：</td>
-              <td><textarea>负责公司web前端产品的设计与开发与维护</textarea></td>
+              <td><textarea>负责公司web前端产品的设计、开发与维护</textarea></td>
             </tr>
           </table>
         </div>
@@ -216,7 +216,7 @@
           <table>
             <tr>
               <td>评价内容：</td>
-              <td><textarea rows="6" cols="30" class="small-font">本人 是全日制本科应届毕业生，软件工程专业，爱运动，爱健身，工作认真负责，有耐心，有责任心，团队精神良好，学习能力强，工作效率高，在校期间自学HTML5，Css3，JavaScript，jQuery，Ajax，Bootstrap，以及部分AngularJs，servlet编程，对后端以及服务器的运作有一定的了解，熟练使用sublime，myclipse，Dreamweaver，Intellij Idea，webstorm等软件编写完整的web前端网页。
+              <td id="mydescription"><textarea rows="6" cols="30" class="small-font">本人 是全日制本科应届毕业生，软件工程专业，爱运动，爱健身，工作认真负责，有耐心，有责任心，团队精神良好，学习能力强，工作效率高，在校期间自学HTML5，Css3，JavaScript，jQuery，Ajax，Bootstrap，以及部分AngularJs，servlet编程，对后端以及服务器的运作有一定的了解，熟练使用sublime，myclipse，Dreamweaver，Intellij Idea，webstorm等软件编写完整的web前端网页。
                 在大二的时候跟同学一起创立公司，在学校取得不错成绩，参加互联网+比赛两次获得省三等奖，此间获得不少项目经验与创业经验，对未来所求职位有莫大的帮助，在校期间协助老师完成论文双选系统前端页面的制作，在学校也经常参加社团活动，做过主持人，英语四级水平。</textarea></td>
             </tr>
 
@@ -250,13 +250,13 @@
     <div class="site-footer">
       <div class="footer-content">
         <div class="site-footer-credits" style="display: inline-block">
-          <dl title="this is a credits list">
-            <dt>credits</dt>
-              <dd>credits</dd>
-            <dt>credits</dt>
-              <dd>credits</dd>
-            <dt>credits</dt>
-              <dd>credits</dd>
+          <dl title="这是我的一些小demo演示网页">
+            <dt>demo1</dt>
+              <dd><a href="./smalltemplate/网易.html">表单验证效果</a></dd>
+            <dt>demo2</dt>
+              <dd><a href="./smalltemplate/smartdata/table1.html">angularjs搜索功能</a></dd>
+            <dt>demo3</dt>
+              <dd><a href="smalltemplate/smartdata/index.html">智数主页</a></dd>
           </dl>
         </div>
         <div class="site-footer-owner"style="display: inline-block">
