some small change
一些样式小修改与链接页面地址修改

--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
         <div class="site-footer-credits" style="display: inline-block">
           <dl title="这是我的一些小demo演示网页">
             <dt>demo1</dt>
-              <dd><a href="./smalltemplate/网易.html">表单验证效果</a></dd>
+              <dd><a href="http://36.111.38.63:8068/credit/common/apply?source=%E7%BD%91%E7%BB%9C">表单验证效果</a></dd>
             <dt>demo2</dt>
               <dd><a href="./smalltemplate/smartdata/table1.html">angularjs搜索功能</a></dd>
             <dt>demo3</dt>
-              <dd><a href="smalltemplate/smartdata/index.html">智数主页</a></dd>
+              <dd><a href="smalltemplate/smartdata/index.html">智数登录页</a></dd>
           </dl>
         </div>
         <div class="site-footer-owner"style="display: inline-block">
