--- a/smalltemplate/smartdata/firstpage.html
+++ b/smalltemplate/smartdata/firstpage.html
@@ -2,29 +2,24 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="keywords" content="大数据，数据，风控">
+    <meta name="keywords" content="智数，大数据，风控">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link rel="shortcut icon" href="image/icon/logo.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="shortcut icon" href="./images/icon/logo.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+    <!--<link rel="stylesheet" href="layui/css/layui.css">-->
     <!--<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">-->
-    <link rel="stylesheet" href="css/metro-icons.css">
-    <script src="jslib/jquery-1.7.2.js"></script>
-    <script src="bootstrap/js/bootstrap.js"></script>
-    <script src="jslib/firstpage.js"></script>
+    <link rel="stylesheet" href="./css/metro-icons.css">
+    <link rel="stylesheet" href="./css/iconfont.css">
+    <link rel="stylesheet" href="./css/firstpage.css">
+    <script src="./jslib/jquery-1.9.1.js"></script>
+    <script src="./bootstrap/js/bootstrap.js"></script>
+    <!--<script src="layui/lay/modules/element.js"></script>-->
     <!-- [if lt IE 9]>
     <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <title>首页</title>
-    <style>
-        html .fix-ie-font-face :before,
-        html .fix-ie-font-face :after {
-            content: none !important;
-        }
-
-    </style>
-
 </head>
 <body>
         <div>
@@ -32,14 +27,14 @@
             <div class="container-fluid">
                 <!--<div class="nav-header">-->
                     <a class="navbar-brand" href="#">
-                        <span><img src="image/mainpage/dllogo.png"></span><h1>大数据风控平台</h1>
+                        <span><img src="./images/mainpage/whitewordlogo.png"></span><h1>大数据风控平台</h1>
                     </a>
                 <!--</div>-->
 
                 <div class="smallbtn-right">
-                    <span class="mif-user"></span><span>欢迎：</span><span id="user-name">xiaoming</span>
-                    <span class="mif-alarm"></span><span id="time-now"></span>
-                    <label class="exit"><span class="mif-exit"></span><span>退出</span></label>
+                    <span class="iconfont icon-user1"></span><span>欢迎 :&nbsp;</span><span id="user-name">xiaoming</span>
+                    <span class="iconfont icon-zhong"></span><span id="time-now"></span>
+                    <label class="exit"><span class="iconfont icon-cha"></span><span>退出</span></label>
                 </div>
             </div>
         </nav>
@@ -48,70 +43,71 @@
             <div class="mainnav-left">
                 <ul class="nav-left">
                     <li id="scroll">
-                            <div class="scrollmenu">
-                                <span class="mif-menu menu-icon"></span>收起侧边栏
-                                <!--<span class="pull-right triangle-left"></span>-->
-                                <!--&lt;!&ndash;<span class="mif-expand-more pull-right"></span>&ndash;&gt;-->
-                                <!--<span class="mif-chevron-left pull-right"></span>-->
-                            </div>
-                        <!--<ul>-->
-                            <!--<li><a href="#"><span class="mif-menu"></span>文字待定1</a></li>-->
-                            <!--<li><a href="#"><span class="mif-menu"></span>文字待定2</a></li>-->
-                            <!--<li><a href="#"><span class="mif-menu"></span>文字待定3</a></li>-->
-                        <!--</ul>-->
+                            <a href="#" class="scrollmenu a1-click">
+                                <span class="mif-command menu-icon"></span>
+                            </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="">
                             <span class="mif-paper-plane menu-icon"></span>风控查询
                             <span class="pull-right triangle-left"></span>
                             <!--<span class="mif-expand-more pull-right"></span>-->
-                            <span class="mif-chevron-left pull-right"></span>
+                            <span class="mif-chevron-thin-left pull-right"></span>
                         </a>
                         <ul>
-                            <li><a href="#" class="query1"><span class="mif-chart-bars2"></span>电信实时单条查询</a></li>
-                            <li><a href="#" class="query2"><span class="mif-chart-pie"></span>电信批量查询</a></li>
+                            <li><a href="#" class="queryOne"><span class="mif-chart-bars2"></span>电信实时单条查询</a></li>
+                            <li><a href="#" class="table1"><span class="mif-chart-pie"></span>电信批量查询</a></li>
                             <li><a href="#" class="query3"><span class="mif-clipboard"></span>电信数据查询结果</a></li>
                             <li><a href="#" class="query4"><span class="mif-folder"></span>风控地图</a></li>
+                            <li><a href="#" class="query5"><span class="mif-equalizer"></span>信用分查询</a></li>
+                            <li><a href="#" class="smartQueryOne"><span class="mif-medal"></span>小智单条查询</a></li>
+                            <li><a href="#" class="query7"><span class="mif-table"></span>小智批量查询</a></li>
+                            <li><a href="#" class="history"><span class="mif-history"></span>查询工单历史</a></li>
                         </ul>
                     </li>
                     <li>
-                            <a href="#">
+                            <a>
                                 <span class="mif-cog menu-icon"></span>系统设置
                                 <span class="pull-right triangle-left"></span>
                                 <!--<span class="mif-expand-more pull-right"></span>-->
-                                <span class="mif-chevron-left pull-right"></span>
+                                <span class="mif-chevron-thin-left pull-right"></span>
                             </a>
                         <ul>
-                            <li><a href="#"><span class="mif-menu"></span>系统设置1</a></li>
-                            <li><a href="#"><span class="mif-menu"></span>系统设置2</a></li>
-                            <li><a href="#"><span class="mif-menu"></span>系统设置3</a></li>
+                            <li><a><span class="mif-menu"></span>系统设置1</a></li>
+                            <li><a><span class="mif-menu"></span>系统设置2</a></li>
+                            <li><a><span class="mif-menu"></span>系统设置3</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
             <div class="maindata">
-                <div>
-                    <h5 class="page-header">首页<span class="icon-point">•</span>查询</h5>
-                </div>
-                <iframe src="table1.html" id="maindata-frame">
-
-                </iframe>
+                    <div style="border-bottom: 1px solid #d5d7dc;position:relative;z-index: 5;background-color: #fff">
+                        <div class="page-tabs">
+                            <ul>
+                                <li class="tab-active" lay-allowclose="false" id="table1"><a href="#">首页</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="tab-iframe">
+                            <iframe src="table1.html" name="table1" id="maindata-frame">
+                            </iframe>
+                    </div>
             </div>
         </div>
         <div class="firstpage-footer">
 
         </div>
-<!--<script src="jslib/angular-1.2.js"></script>-->
-<!--<script src="jslib/firstpageData.js"></script>-->
 </body>
-<link rel="stylesheet" href="css/firstpage.css">
+<!--<script src="layui/layui.js"></script>-->
+<script src="./jslib/firstpage.js"></script>
 <script>
     //重设伪类，使字体强制生效
     !(function redrawFontFace() {
         if ($.support.leadingWhitespace) return;
         $(window).on("load", function() {
-            var style = $("head>style");
-            //console.log("onload!!!!!!!!!!!");
+            var style = $("<style>");
+            $("head").append(style);
+            console.log("onload!!!!!!!!!!!");
             setTimeout(function() {
                 style.remove();
             }, 100);
