--- a/smalltemplate/smartdata/index.html
+++ b/smalltemplate/smartdata/index.html
@@ -4,8 +4,8 @@
     <meta  http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />-->
     <title>大数据风控平台登录页面</title>
-    <link rel="shortcut icon" href="image/icon/logo.ico" type="image/x-icon"/>
-    <meta name="keywords" content="数据，大数据，风控,平台登录">
+    <link rel="shortcut icon" href="images/icon/logo.ico" type="image/x-icon"/>
+    <meta name="keywords" content="智数，数据，大数据，风控,平台登录">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link rel="stylesheet" href="css/metro-icons.css">
@@ -22,12 +22,13 @@
     <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="jslib/smart.verfiy.js"></script>
 </head>
 <body>
     <h1 class="uSEO"></h1>
     <div class="main-whole">
         <div id="login-box">
-            <div class="logo-img"><a href="#"><img src="image/mainpage/word-logo.png"/></a></div>
+            <div class="logo-img"><a href="#"><img src="images/mainpage/word-logo.png"/></a></div>
             <button class="login-button">登录</button>
             <div class="login-main">
                 <div id="login">
@@ -50,11 +51,21 @@
                         <!--</div>-->
                         <input type="submit" value="登录"/>
                         <div class="access-pic">
-                            <div class="access-word">请选择：<span>小猫</span>
-                                <a href="#"><span class="mif-loop2 access-refresh">刷新</span></a>
-                            </div>
-                            <div>
-                                <img style="width: 100%;height: 100%" src="http://36.111.38.138:8083/portal/identify">
+                            <!--<div class="access-word">请选择：<span>小猫</span>-->
+                                <!--<a href="#"><span class="mif-loop2 access-refresh">刷新</span></a>-->
+                            <!--</div>-->
+                            <!--<div>-->
+                                <!--<img style="width: 100%;height: 100%" src="http://36.111.38.138:8083/portal/identify">-->
+                            <!--</div>-->
+                            <div class="row col-lg-6">
+                                <div id = "picture">
+                                    <img src="verfiyCode" onclick="clickImg(event)" id="bigPicture" style="width:100%; height: 175px;"/>
+                                </div>
+                                <div style="margin-top: -175px; width: 300px; height:25px; z-index: 100; position: relative">
+                                    <label id = "label-refresh" style="margin-left: 250px; margin-top: 2px;">
+                                        <i class = "glyphicon glyphicon-refresh" onclick="refresh()" style="cursor: pointer">刷新</i>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -65,7 +76,7 @@
             <div class="login-left">
                 <div id="card">
                     最新推出
-                    <ul>
+                    <ul class="colspan6">
                         <li class="card card1">
                             <div class="card-word">以下是功能简单介绍，请看看是否有错，是否能看懂</div>
                         </li>
@@ -96,7 +107,7 @@
                         </li>
                         <li class="small-function">
                             <div class="card3 change"><span class="mif-cog"></span></div>
-                            <div class="card3 card-inside change"><span class="mif-cog"></span></div>
+                            <div class="card3 card-inside"><span class="mif-cog"></span></div>
                             <div class="card3 change" style="float: right;"><span class="mif-cog"></span></div>
                         </li>
                         <li class="small-function">
