--- a/smalltemplate/smartdata/queryOneResult.html
+++ b/smalltemplate/smartdata/queryOneResult.html
@@ -5,12 +5,14 @@
     <meta name="keywords" content="大数据，数据，风控">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link rel="shortcut icon" href="image/icon/logo.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/icon/logo.ico" type="image/x-icon"/>
     <!--<link rel="stylesheet" href="bootstrap/css/bootstrap.css">-->
     <link rel="stylesheet" href="css/metro-icons.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/tableBackground.css">
     <link rel="stylesheet" href="css/queryOneResult.css">
-    <script src="jslib/jquery-1.7.2.js"></script>
+    <script src="jslib/jquery-1.9.1.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
     <title>单条查询结果</title>
 </head>
 <body>
@@ -21,91 +23,124 @@
                     <h4>数据查询结果展示<small><span>订单号：</span>
                         <span id="orderFormNumber">68007097</span></small>
                     </h4>
-                    <div class="personal-card">
-                        <div class="personal-info">
-                            <div id="personal-pic">
-                                <img src="http://36.111.38.138:8083/portal/identify">
+                    <div class="info-box">
+                        <div class="personal-card">
+                            <div class="personal-info">
+                                <div id="personal-pic">
+                                    <img src="./images/personal-pic.png">
+                                </div>
+                                    <div class="form-horizontal main-info">
+                                        <div class="form-group" id="username">
+                                            <label class="control-label col-xs-4">
+                                                姓名：<span class="mif-unlink pass"></span></label>
+                                            <input type="text"class="input-pass col-xs-7" name="name"/>
+                                            <span class="mif-mobile input-error"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-xs-4">手机号：<span class="mif-unlink pass"></span></label>
+                                            <input type="text"class="input-pass col-xs-7" name="mobile"/>
+                                            <span class="mif-mobile input-error"></span>
+                                        </div>
+                                        <div class="form-group" id="identify">
+                                            <label class="control-label col-xs-4">身份证：<span class="mif-unlink pass"></span></label>
+                                            <input type="text"class="input-error col-xs-7" name="identify"/>
+                                            <span class="mif-mobile input-error"></span>
+                                        </div>
+                                        <div class="form-group form-group-unkown">
+                                            <label class="control-label col-xs-4">单位：<span class="mif-unlink unknow"></span></label>
+                                            <input type="text"class="input-unkown col-xs-7" name="unit"/>
+                                        </div>
+                                        <div class="form-group form-group-unkown">
+                                            <label class="control-label col-xs-4">单位地址：<span class="mif-unlink unknow"></span></label>
+                                            <input type="text"class="input-unkown col-xs-7" name="location"/>
+                                        </div>
+                                    </div>
+                                <!--<table class="main-info">-->
+                                    <!--<tr>-->
+                                        <!--<td>姓名：<span class="mif-unlink pass"></span></td>-->
+                                        <!--<td><input class="input-pass" type="text" name="name"/><span></span></td>-->
+                                    <!--</tr>-->
+                                    <!--<tr>-->
+                                        <!--<td>手机号：<span class="mif-unlink"></span></td>-->
+                                        <!--<td><input type="text" name="mobile"/><span></span></td>-->
+                                    <!--</tr>-->
+                                    <!--<tr>-->
+                                        <!--<td>身份证：<span class="mif-unlink"></span></td>-->
+                                        <!--<td><input class="input-error" type="text" name="identifyCard"/><span class="mif-mobile input-error"></span></td>-->
+                                    <!--</tr>-->
+                                    <!--<tr>-->
+                                        <!--<td>单位：<span class="mif-unlink"></span></td>-->
+                                        <!--<td><input class="unknow" type="text" name="unit"/><span></span></td>-->
+                                    <!--</tr>-->
+                                    <!--<tr>-->
+                                        <!--<td>单位地址：<span class="mif-unlink"></span></td>-->
+                                        <!--<td><input type="text" name="location"/><span></span></td>-->
+                                    <!--</tr>-->
+                                <!--</table>-->
                             </div>
-                            <table class="main-info">
-                                <tr>
-                                    <td>姓名：<span class="mif-unlink pass"></span></td>
-                                    <td><input class="input-pass" type="text" name="name"/><span></span></td>
-                                </tr>
-                                <tr>
-                                    <td>手机号：<span class="mif-unlink"></span></td>
-                                    <td><input type="text" name="mobile"/><span></span></td>
-                                </tr>
-                                <tr>
-                                    <td>身份证：<span class="mif-unlink"></span></td>
-                                    <td><input class="input-error" type="text" name="identifyCard"/><span class="mif-mobile input-error"></span></td>
-                                </tr>
-                                <tr>
-                                    <td>单位：<span class="mif-unlink"></span></td>
-                                    <td><input class="unknow" type="text" name="unit"/><span></span></td>
-                                </tr>
-                                <tr>
-                                    <td>单位地址：<span class="mif-unlink"></span></td>
-                                    <td><input type="text" name="location"/><span></span></td>
-                                </tr>
-                            </table>
-                        </div>
 
-                    </div>
-                    <div class="personal-card">
-                        <div class="other-info">
-                            <table>
-                                <tr>
-                                    <td class="col1"><span class="small-blue-block"></span></td>
-                                    <td class="col2">手机归属地：</td>
-                                    <td class="col3"><span>广东省广州市</span></td>
-                                    <td class="col4"></td>
-                                </tr>
-                                <tr>
-                                    <td><span class="small-blue-block"></span></td>
-                                    <td>上月驻留城市：</td>
-                                    <td><span>广东省广州市</span></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td><span class="small-blue-block"></span></td>
-                                    <td>在网时长：</td>
-                                    <td><span>A</span></td>
-                                    <td><span>A:1 ~ 10天</span></td>
-                                </tr>
-                            </table>
-                            <table>
-                                <tr>
-                                    <td class="col1"><span class="small-blue-block"></span></td>
-                                    <td class="col2">消费档次：</td>
-                                    <td class="col3"><span>D</span></td>
-                                    <td class="col4"><span>D:1500元以上</span></td>
-                                </tr>
-                                <tr>
-                                    <td><span class="small-blue-block"></span></td>
-                                    <td>欠费情况：</td>
-                                    <td><span>D</span></td>
-                                    <td><spam>D:无</spam></td>
-                                </tr>
-                            </table>
-                            <table style="border-bottom: none">
-                                <tr>
-                                    <td class="col1"><span class="small-blue-block"></span></td>
-                                    <td class="col2">淘宝打开次数：</td>
-                                    <td class="col3"><span>A</span></td>
-                                    <td class="col4"><span>A:1 ~ 50次</span></td>
-                                </tr>
-                                <tr>
-                                    <td><span class="small-blue-block"></span></td>
-                                    <td>京东打开次数：</td>
-                                    <td><span>A</span></td>
-                                    <td><span>C:101 ~ 150次</span></td>
-                                </tr>
-                            </table>
                         </div>
+                        <div class="personal-card">
+                            <div class="other-info">
+                                <table>
+                                    <tr>
+                                        <td class="col1"><span class="small-blue-block"></span></td>
+                                        <td class="col2">手机归属地：</td>
+                                        <td class="col3"><span>广东省广州市</span></td>
+                                        <td class="col4"></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="small-blue-block"></span></td>
+                                        <td>上月驻留城市：</td>
+                                        <td><span>广东省广州市</span></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="small-blue-block"></span></td>
+                                        <td>在网时长：</td>
+                                        <td><span>A</span></td>
+                                        <td><span>A:1 ~ 10天</span></td>
+                                    </tr>
+                                </table>
+                                <table>
+                                    <tr>
+                                        <td class="col1"><span class="small-blue-block"></span></td>
+                                        <td class="col2">消费档次：</td>
+                                        <td class="col3"><span>D</span></td>
+                                        <td class="col4"><span>D:1500元以上</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="small-blue-block"></span></td>
+                                        <td>欠费情况：</td>
+                                        <td><span>D</span></td>
+                                        <td><spam>D:无</spam></td>
+                                    </tr>
+                                </table>
+                                <table style="border-bottom: none">
+                                    <tr>
+                                        <td class="col1"><span class="small-blue-block"></span></td>
+                                        <td class="col2">淘宝打开次数：</td>
+                                        <td class="col3"><span>A</span></td>
+                                        <td class="col4"><span>A:1 ~ 50次</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="small-blue-block"></span></td>
+                                        <td>京东打开次数：</td>
+                                        <td><span>A</span></td>
+                                        <td><span>C:101 ~ 150次</span></td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="function-btn">
+                        <button type="button">打印</button>
+                        <button type="button">返回</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="./jslib/queryOneResult.js"></script>
 </html>
