--- a/smalltemplate/smartdata/table1.html
+++ b/smalltemplate/smartdata/table1.html
@@ -2,73 +2,174 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="keywords" content="大数据，数据，风控">
+    <meta name="keywords" content="智数,大数据，数据，风控">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link rel="shortcut icon" href="image/icon/logo.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/icon/logo.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="css/metro-icons.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-table.css">
+    <!--<link rel="stylesheet" href="css/metro-icons.css">-->
     <link rel="stylesheet" href="css/tableBackground.css">
     <link rel="stylesheet" href="css/table1.css">
-    <script src="jslib/jquery-1.7.2.js"></script>
+    <script src="jslib/jquery-1.9.1.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="bootstrap/js/bootstrap-table.js"></script>
+    <script src="bootstrap/js/bootstrap-table-zh-CN.js"></script>
+    <script src="jslib/tableControl.js"></script>
+    <!-- [if lt IE 9]>
+    <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <title>批量查询</title>
 </head>
-<body>
-    <div id="maindata" ng-app="myApp">
+<body style="height: 100%">
+    <div id="maindata">
     <div class="maindata-inner">
         <div class="main-content">
             <div>
-                <div class="pull-right">
-                    <div class="input-append">
-                        <input type="text" ng-model="search"/>
-                        <button class="btn">
-                            <span class="mif-search"></span></button>
-                    </div>
-                    <div class="btn-group">
-                        <button class="btn btn-warning"><span class="mif-loop2"></span></button>
-                        <button class="btn btn-warning"><span class="mif-list"></span></button>
-                        <button class="btn btn-warning"><span class="mif-windows"></span></button>
+                <table class="table" ng-controller="firstpageData" id="table">
+                    <!--<div id="toolbar">-->
+                        <!--<div class="btn-group btn-default">-->
+                            <!--<button id="toolEdit" class="btn btn-default" data-toggle="modal" data-target="#editModal"><span class="glyphicon glyphicon-edit"></span></button>-->
+                            <!--<button id="toolAdd" class="btn btn-default" data-toggle="modal" data-target="#addModal"><span class="glyphicon glyphicon-plus"></span></button>-->
+                            <!--<button id="toolDelete" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                </table>
+            </div>
+            <div class="modal fade" id="detailModal" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button class="close" type="button" data-dismiss="modal">×</button>
+                            <h3 id="modalLabel">详情页面</h3>
+                        </div>
+                        <div class="modal-body">
+                            <table class="table">
+                                <tr>
+                                    <td>编号</td>
+                                    <td id="idDetail"></td>
+                                </tr>
+                                <tr>
+                                    <td>分类</td>
+                                    <td id="cateDetail"></td>
+                                </tr>
+                                <tr>
+                                    <td>名称</td>
+                                    <td id="nameDetail"></td>
+                                </tr>
+                                <tr>
+                                    <td>支持运营商</td>
+                                    <td id="suportDetail"></td>
+                                </tr>
+                                <tr>
+                                    <td>描述</td>
+                                    <td id="descDetail"></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="modal-footer"></div>
                     </div>
                 </div>
             </div>
-            <div>
-                <table class="table table-bordered table-hover" ng-controller="firstpageData">
-                    <thead>
-                    <tr>
-                        <th id="id-all">编号</th>
-                        <th id="cate-all">分类</th>
-                        <th id="name-all">名称</th>
-                        <th id="suport-all">支持运营商</th>
-                        <th id="description-all">描述</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="test in testData | filter:search">
-                        <td>{{test.id}}</td>
-                        <td>{{test.cate}}</td>
-                        <td>{{test.name}}</td>
-                        <td>{{test.suport}}</td>
-                        <td>{{test.description}}</td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div class="modal fade" id="addModal" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <form action="#" class="form-horizontal">
+                        <div class="modal-header">
+                            <button class="close" type="button" data-dismiss="modal">×</button>
+                            <h3>添加数据</h3>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">编号</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="addId" readonly placeholder="id自动生成"/>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">分类</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="addCate"/>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">名称</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="addName"/>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">支持运营商</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="addSuport"/>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">描述</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="addDesc"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" id="addSubmit" class="btn btn-info">确定</button>
+                            <button type="button" data-dismiss="modal" class="btn btn-default">关闭</button>
+                        </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="page-control pull-right">
-                <span><a href="#">上一页</a></span>
-                <label><a class="page-active" href="#">1</a></label>
-                <label><a href="#">2</a></label>
-                <label><a href="#">3</a></label>
-                <label style="margin-right: 0px;"><a href="#">4</a></label>
-                <span style="margin: 0px;">......</span>
-                <label style="margin-right: 0px;"><a href="#">20</a></label>
-                <span><a href="#">下一页</a></span>
-                <span>共20页</span>
+            <div class="modal fade" id="editModal" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <form class="form-horizontal">
+                        <div class="modal-header">
+                            <button class="close" type="button" data-dismiss="modal">×</button>
+                            <h3>编辑数据</h3>
+                        </div>
+                        <div class="modal-body">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">编号</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="editId" readonly />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">分类</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="editCate"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">名称</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="editName"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">支持运营商</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="editSuport"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">描述</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" name="editDesc"/>
+                                        </div>
+                                    </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" id="editSubmit" class="btn btn-info">确定</button>
+                            <button type="button" data-dismiss="modal" class="btn btn-default">关闭</button>
+                        </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 </body>
-<script src="jslib/angular-1.2.js"></script>
-<script src="jslib/firstpageData.js"></script>
 </html>
