--- a/smalltemplate/smartdata/table1.html
+++ b/smalltemplate/smartdata/table1.html
@@ -14,7 +14,7 @@
     <script src="jslib/jquery-1.9.1.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
     <script src="bootstrap/js/bootstrap-table.js"></script>
-    <script src="bootstrap/js/bootstrap-table-zh-CN.js"></script>
+    <script src="bootstrap/js/bootstrap-table-zh-CN.min.js"></script>
     <script src="jslib/tableControl.js"></script>
     <!-- [if lt IE 9]>
     <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
