--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </tr>
             <tr>
               <td>期望月薪：</td>
-              <td>6000</td>
+              <td>6-10k</td>
             </tr>
           </table>
         </div>
@@ -254,7 +254,7 @@
             <dt>demo1</dt>
               <dd><a href="http://36.111.38.63:8068/credit/common/apply?source=%E7%BD%91%E7%BB%9C">表单验证效果</a></dd>
             <dt>demo2</dt>
-              <dd><a href="./smalltemplate/smartdata/table1.html">angularjs搜索功能</a></dd>
+              <dd><a href="./smalltemplate/smartdata/firstpage.html">智数公司作品部分</a></dd>
             <dt>demo3</dt>
               <dd><a href="smalltemplate/smartdata/index.html">智数登录页</a></dd>
           </dl>
